--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         <div class="container">
             <section>
                 <h2 class="ds-heading">About Me</h2>
-                <p>I am an electronics and telecommunications engineer turned software developer. In early days, started as an intern for HTML-Javascript, and now does infrastructure provision automation. Product and feature planning, mid-level coding, infrastructure,
-                    and delivery management are the primary areas of expertise. I am constantly willing to learn new procedures and technologies.
+                <p>As an individual with a diverse background in electronics and telecommunications engineering, I have transitioned my skills to excel as a software developer. I began my career as an intern working with HTML and Javascript and have now
+                    expanded my expertise to include infrastructure provision automation. My strengths lie in product and feature planning, mid-level coding, infrastructure management, and delivery management. Despite my achievements, I remain humble
+                    and continuously strive to acquire new knowledge and skills in emerging technologies and innovative procedures. I am a passionate learner and enthusiastic about discovering new approaches to elevate my proficiency in the field.
                 </p>
                 <div class="ds-button-sec text-center">
                     <a href="#" class="ds-button">Download Resume</a>
@@ -148,118 +149,108 @@
         <div class="container">
             <h2 class="ds-heading">Work Experience</h2>
             <div class="row ds-experience-list">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <section>
                         <span class="ds-year">Feb 2022 - Present</span>
                         <h3 class="ds-officename">FINEOS</h3>
                         <span class="ds-department">Senior Software Developer</span>
-                        <p>Worked in CIA Team, Developing feature and solutions for internal AWS infrastructure for Fineos Products.</p>
+                        <p>Worked in CIA (Cloud Infrastructure Automation) team, developing feature and solutions for internal AWS infrastructure for Fineos products.</p>
                         <ul>
-                            <li>
-                                <ul style="padding-top:0">Worked in the team of 10. Features and Epics revoleves around follwoign things:
-                                    <li style="padding-top:10">Security and observility of infrastructure to CloudOps</li>
-                                    <li>General improvments efficienty and cost effectivness of AWS inftastructure.</li>
-                                </ul>
-                            </li>
+                            <li>I was part of a 10-member team that focused on developing features and epics related to enhancing the security and observability of the infrastructure for CloudOps. Additionally, we also aimed to improve the overall efficiency
+                                and cost-effectiveness of the AWS infrastructure. Our team worked towards achieving these objectives through various measures and strategies.</li>
+                            <li>Work areas: AWS CDK, TypeScript, AWS console and services, AWS CLI.</li>
                         </ul>
                     </section>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <section>
-                        <span class="ds-year">2018 - 2019</span>
-                        <h3 class="ds-officename">Lexind</h3>
-                        <span class="ds-department">Senior app developer</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
+                        <span class="ds-year">Nov 2021 - Mar 2022</span>
+                        <h3 class="ds-officename">Spraoi - KwikCover</h3>
+                        <span class="ds-department">Senior Software Developer</span>
+                        <p>Worked in backend team, developing APIs for Insurance Agent portal.</p>
                         <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
+                            <li>As part of an 8-member team, I collaborated on various features aimed at providing a more user-friendly experience to Insurance Agents. In particular, I focused on the Reporting Module, which enabled Agents and clients to run
+                                reports on sales and claims.</li>
+                            <li>Work areas: SpringBoot, Java, and REST-APIs.</li>
                         </ul>
                     </section>
                 </div>
-
             </div>
-        </div>
-    </div>
-    <!-- Experience -->
-
-    <!-- Work -->
-    <!-- <div class="ds-work-section">
-        <div class="container">
-            <h2 class="ds-heading">Latest works</h2>
-            <div class="ds-work-list-section">
-                <div class="ds-work-list">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
-                            <section>
-                                <h3 class="ds-work-tilte">Tripy mobile app</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis.
-                                    Aenean malesuada eu orci non sodales. </p>
-                                <a href="works-setails.html" class="ds-button">Details</a>
-                            </section>
-                        </div>
-                        <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                            <figure><img src="assets/images/work-1.jpg"></figure>
-                        </div>
-                    </div>
+            <div class="row ds-experience-list">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <section>
+                        <span class="ds-year">Nov 2019 - Aug 2021</span>
+                        <h3 class="ds-officename">Spraoi - Mortis</h3>
+                        <span class="ds-department">Senior Software Developer/Project Lead</span>
+                        <p>Worked on backend team, developing functional workflow to handle insurance sales intake and reduce manual work with the help of OCR.</p>
+                        <ul>
+                            <li>Integrated Flexicapture OCR with insurance forms manager created using Java at backend and React at frontend. Created template based form creation using Databases. Worked on creating Reporting sections to provide visibility
+                                to sales and analytic teams.</li>
+                            <li>Work areas: SpringBoot, Hibernate, Postgres, and Abby Flexicapture OCR</li>
+                        </ul>
+                    </section>
                 </div>
-                <div class="ds-work-list">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
-                            <section>
-                                <h3 class="ds-work-tilte">Hello mobile app</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis.
-                                    Aenean malesuada eu orci non sodales. </p>
-                                <a href="works-setails.html" class="ds-button">Details</a>
-                            </section>
-                        </div>
-                        <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                            <figure><img src="assets/images/work-2.jpg"></figure>
-                        </div>
-                    </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <section>
+                        <span class="ds-year">Sep 2019 - Dec 2019</span>
+                        <h3 class="ds-officename">AdstringO</h3>
+                        <span class="ds-department">Software Developer</span>
+                        <p>Worked individually with client to build custom compression algorithm</p>
+                        <ul>
+                            <li>Worked On compression algorithms for media files.</li>
+                            <li>Work areas: SpringBoot, Java, and REST-APIs.</li>
+                        </ul>
+                    </section>
                 </div>
-                <div class="ds-work-list">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
-                            <section>
-                                <h3 class="ds-work-tilte">Cute cookies app</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis.
-                                    Aenean malesuada eu orci non sodales. </p>
-                                <a href="works-setails.html" class="ds-button">Details</a>
-                            </section>
-                        </div>
-                        <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                            <figure><img src="assets/images/work-3.jpg"></figure>
-                        </div>
-                    </div>
+            </div>
+            <div class="row ds-experience-list">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <section>
+                        <span class="ds-year">July 2018 - Dec 2019</span>
+                        <h3 class="ds-officename">Anant Corp.</h3>
+                        <span class="ds-department"> Software Developer</span>
+                        <p>Worked on Multiple project and Technologies</p>
+                        <ul>
+                            <li>Worked in team of two on few projects to develope minor to mid grade features. Got exposure to US client and work culture.</li>
+                            <li>Work areas: Docker, Python, Zoho forms and Javascript</li>
+                        </ul>
+                    </section>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <section>
+                        <span class="ds-year">Jun 2017 - Dec 2018</span>
+                        <h3 class="ds-officename">IGC/Move HQ</h3>
+                        <span class="ds-department">Junior Software Developer</span>
+                        <p>Worked with transportation company to automated inventory handling.</p>
+                        <ul>
+                            <li>Created fileable PDF and digital signature document using HTML and Javascript.</li>
+                            <li>Work areas: HTML, Less, Css, and Javascript</li>
+                        </ul>
+                    </section>
                 </div>
             </div>
         </div>
-    </div> -->
-    <!--  Work -->
+        <!-- Experience -->
 
-    <!--  footer -->
-    <footer class="ds-footer text-center">
-        <div class="container">
-            <section>
-                <span>Stay in touch</span>
-                <h4>Ready to talk?</h4>
-                <p>Feel free to contact us</p>
-                <a href="mailto:test@test.com" class="ds-button">Lets Talk</a>
-            </section>
-            <span class="ds-copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
-        </div>
-    </footer>
+        <!--  footer -->
+        <footer class="ds-footer text-center">
+            <div class="container">
+                <section>
+                    <span>Stay in touch</span>
+                    <h4></h4>
+                    <p></p>
+                    <a href="mailto:rohanbane09121993@gmail.com" class="ds-button">Lets Talk</a>
+                </section>
+
+            </div>
+        </footer>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-    <script src="assets/js/main.js"></script>
+        <script src="assets/js/main.js"></script>
 </body>
 
 </html>
