--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                     <section>
                         <h1>
-                            <span>HI THERE</span> I’m Rohan Bane <br> Software Developer.
+                            <span>HI THERE</span>Rohan Bane <br> Software Developer.
                         </h1>
                         <ul class="ds-numbervalulist">
                             <li>
@@ -83,9 +83,10 @@
                     expanded my expertise to include infrastructure provision automation. My strengths lie in product and feature planning, mid-level coding, infrastructure management, and delivery management. Despite my achievements, I remain humble
                     and continuously strive to acquire new knowledge and skills in emerging technologies and innovative procedures. I am a passionate learner and enthusiastic about discovering new approaches to elevate my proficiency in the field.
                 </p>
-                <div class="ds-button-sec text-center">
+                <!-- <div class="ds-button-sec text-center">
                     <a href="#" class="ds-button">Download Resume</a>
-                </div>
+                </div> -->
+                <!-- In Progress -->
             </section>
         </div>
     </div>
@@ -126,10 +127,8 @@
                         <li>AWS</li>
                         <li>Github/Gitlab</li>
                         <li>Jenkins</li>
-                        <li>Ansible</li>
                         <li>JIRA</li>
                         <li>Confluence</li>
-                        <li>Abby FlexiCapture (OCR)</li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
@@ -137,6 +136,7 @@
                     <ul class="ds-skills-list">
                         <li>AWS CDK</li>
                         <li>REST-APIs</li>
+                        <li>Abby FlexiCapture (OCR)</li>
                     </ul>
                 </div>
             </div>
@@ -145,6 +145,11 @@
     <!--  Skills -->
 
     <!-- Experience -->
+    <div class="ds-experience-section">
+        <div class="container">
+            <h2 class="ds-heading"></h2>
+        </div>
+    </div>
     <div class="ds-experience-section">
         <div class="container">
             <h2 class="ds-heading">Work Experience</h2>
@@ -208,8 +213,8 @@
                     <section>
                         <span class="ds-year">July 2018 - Dec 2019</span>
                         <h3 class="ds-officename">Anant Corp.</h3>
-                        <span class="ds-department"> Software Developer</span>
-                        <p>Worked on Multiple project and Technologies</p>
+                        <span class="ds-department">Software Developer</span>
+                        <p>Worked on multiple project and technologies</p>
                         <ul>
                             <li>Worked in team of two on few projects to develope minor to mid grade features. Got exposure to US client and work culture.</li>
                             <li>Work areas: Docker, Python, Zoho forms and Javascript</li>
