--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <ul>
                             <li>I was part of a 10-member team that focused on developing features and epics related to enhancing the security and observability of the infrastructure for CloudOps. Additionally, we also aimed to improve the overall efficiency
                                 and cost-effectiveness of the AWS infrastructure. Our team worked towards achieving these objectives through various measures and strategies.</li>
-                            <li>Work areas: AWS CDK, TypeScript, AWS console and services, AWS CLI.</li>
+                            <li>Work areas: AWS CDK, TypeScript, AWS console and services, and AWS CLI.</li>
                         </ul>
                     </section>
                 </div>
@@ -217,7 +217,7 @@
                         <p>Worked on multiple project and technologies</p>
                         <ul>
                             <li>Worked in team of two on few projects to develope minor to mid grade features. Got exposure to US client and work culture.</li>
-                            <li>Work areas: Docker, Python, Zoho forms and Javascript</li>
+                            <li>Work areas: Docker, Python, Zoho forms, and Javascript</li>
                         </ul>
                     </section>
                 </div>
