--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <span class="ds-department">Software Developer</span>
                         <p>Worked on multiple project and technologies</p>
                         <ul>
-                            <li>Worked in team of two on few projects to develope minor to mid grade features. Got exposure to US client and work culture.</li>
+                            <li>Worked in team of two on few projects to develop minor to mid grade features. Got exposure to US client and work culture.</li>
                             <li>Work areas: Docker, Python, Zoho forms, and Javascript</li>
                         </ul>
                     </section>
@@ -229,7 +229,7 @@
                         <p>Worked with transportation company to automated inventory handling.</p>
                         <ul>
                             <li>Created fileable PDF and digital signature document using HTML and Javascript.</li>
-                            <li>Work areas: HTML, Less, Css, and Javascript</li>
+                            <li>Work areas: HTML, LESS, CSS, and Javascript</li>
                         </ul>
                     </section>
                 </div>
