--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <span class="ds-department">Senior Software Developer</span>
                         <p>Worked in CIA (Cloud Infrastructure Automation) team, developing feature and solutions for internal AWS infrastructure for Fineos products.</p>
                         <ul>
-                            <li>I was part of a 10-member team that focused on developing features and epics related to enhancing the security and observability of the infrastructure for CloudOps. Additionally, we also aimed to improve the overall efficiency
+                            <li>I am part of a 10-member team that focused on developing features and epics related to enhancing the security and observability of the infrastructure for CloudOps. Additionally, we also aimed to improve the overall efficiency
                                 and cost-effectiveness of the AWS infrastructure. Our team worked towards achieving these objectives through various measures and strategies.</li>
                             <li>Work areas: AWS CDK, TypeScript, AWS console and services, and AWS CLI.</li>
                         </ul>
