--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <!-- social -->
                 <ul class="ds-social">
                     <li><a href="https://github.com/rohanbane" target="_blank"><i class="ri-github-fill"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/rohan-bane" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/rohan-bane" target="_blank"><i class="ri-likedin-fill"></i></a></li>
+                    <li><button onclick="downloadAsPDF()">Download</button></li>
                 </ul>
                 <!-- social -->
             </div>
@@ -256,6 +257,25 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <script src="assets/js/main.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
+        
+    <script>
+        function downloadAsPDF() {
+            const doc = new jsPDF();
+
+            // Get the HTML content of the current page
+            const html = document.documentElement.outerHTML;
+
+            // Generate PDF from the HTML content
+            doc.fromHTML(html, 15, 15, {
+                width: 180
+            });
+
+            // Download the PDF file
+            doc.save("page.pdf");
+        }
+    </script>
 </body>
 
 </html>
