--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Main CSS -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 
 
     <title>Portfolio</title>
@@ -83,9 +85,10 @@
                     expanded my expertise to include infrastructure provision automation. My strengths lie in product and feature planning, mid-level coding, infrastructure management, and delivery management. Despite my achievements, I remain humble
                     and continuously strive to acquire new knowledge and skills in emerging technologies and innovative procedures. I am a passionate learner and enthusiastic about discovering new approaches to elevate my proficiency in the field.
                 </p>
-                <!-- <div class="ds-button-sec text-center">
+                <div class="ds-button-sec text-center">
                     <a href="#" class="ds-button">Download Resume</a>
-                </div> -->
+                    <a onclick="downloadAsPDF()" class="ds-button">Download Resume</a>
+                </div>
                 <!-- In Progress -->
             </section>
         </div>
@@ -129,6 +132,7 @@
                         <li>Jenkins</li>
                         <li>JIRA</li>
                         <li>Confluence</li>
+                        <li>Circle-CI</li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
@@ -256,6 +260,24 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <script src="assets/js/main.js"></script>
-</body>
+        <script>
+            function downloadAsPDF() {
+                const element = document.documentElement;
+                const options = {
+                    filename: 'Resume-Rohan-Bane-Software-Developer.pdf',
+                    html2canvas: {
+                        scale: 2 // Increase the scale for better quality (optional)
+                    },
+                    jsPDF: {
+                        unit: 'px',
+                        format: 'a4',
+                        orientation: 'portrait'
+                    }
+                };
+        
+                html2pdf().set(options).from(element).save();
+            }
+        </script>
+    </body>
 
 </html>
