Add settings for live preview and update index.html structure

--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Google Fots -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <!-- Remixicon Icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <!-- Remixicon Icon -->
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- Main CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="assets/css/main.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
 
@@ -26,7 +19,6 @@
 
 <body>
 
-    <!-- header -->
     <header class="ds-header" id="site-header">
         <div class="container">
             <div class="ds-header-inner">
@@ -44,8 +36,6 @@
             </div>
         </div>
     </header>
-    <!-- header -->
-    <!-- banner -->
     <div class="ds-banner">
         <div class="container">
             <div class="row">
@@ -74,9 +64,7 @@
             </div>
         </div>
     </div>
-    <!-- banner -->
 
-    <!-- about -->
     <div class="ds-about-section">
         <div class="container">
             <section>
@@ -85,13 +73,10 @@
                     expanded my expertise to include infrastructure provision automation. My strengths lie in product and feature planning, mid-level coding, infrastructure management, and delivery management. Despite my achievements, I remain humble
                     and continuously strive to acquire new knowledge and skills in emerging technologies and innovative procedures. I am a passionate learner and enthusiastic about discovering new approaches to elevate my proficiency in the field.
                 </p>
-                <!-- In Progress -->
             </section>
         </div>
     </div>
-    <!-- about -->
 
-    <!--  Skills -->
     <div class="ds-skills-section">
         <div class="container">
             <div class="row">
@@ -142,12 +127,10 @@
             </div>
         </div>
     </div>
-    <!--  Skills -->
 
-    <!-- Experience -->
     <div class="ds-experience-section">
         <div class="container">
-            <h2 class="ds-heading"></h2>
+            <!-- Experience section intentionally left blank for future content -->
         </div>
     </div>
     <div class="ds-experience-section">
@@ -235,9 +218,7 @@
                 </div>
             </div>
         </div>
-        <!-- Experience -->
 
-        <!--  footer -->
         <footer class="ds-footer text-center">
             <div class="container">
                 <section>
@@ -252,9 +233,7 @@
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="assets/js/main.js"></script>
     </body>
 
