--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                                 <span>Projects</span>
                             </li>
                         </ul>
+                        <!-- <div style="margin-top: 2rem;">
+                            <a href="assets/aaj-kya-banau/index.html" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer">
+                                Visit: Aaj Kya Banau?
+                            </a>
+                        </div> -->
                     </section>
                 </div>
             </div>
