--- a/index.html
+++ b/index.html
@@ -1,245 +1,95 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="assets/css/main.css" rel="stylesheet">
-
-
-
-    <title>Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Rohan Bane — Software Developer</title>
+  <meta name="description" content="Rohan Bane - Software Developer & Cloud Engineer" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <!-- FontAwesome (icons) -->
+  <script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-
-    <header class="ds-header" id="site-header">
-        <div class="container">
-            <div class="ds-header-inner">
-                <!-- logo -->
-                <a href="index.html" class="ds-logo">
-                    <span>R</span>Rohan Bane
-                </a>
-                <!-- logo -->
-                <!-- social -->
-                <ul class="ds-social">
-                    <li><a href="https://github.com/rohanbane" target="_blank"><i class="ri-github-fill"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/rohan-bane" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
-                </ul>
-                <!-- social -->
-            </div>
+  <header class="site-header">
+    <div class="container header-grid">
+      <div class="brand">
+        <div class="logo">R</div>
+        <div>
+          <h1 id="name">Rohan Bane</h1>
+          <p id="title">Software Developer</p>
         </div>
-    </header>
-    <div class="ds-banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                    <figure>
-                        <img src="assets/images/profile-image.jpg">
-                    </figure>
-                </div>
-                <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
-                    <section>
-                        <h1>
-                            <span>HI THERE</span>Rohan Bane <br> Software Developer.
-                        </h1>
-                        <ul class="ds-numbervalulist">
-                            <li>
-                                <strong>7+</strong>
-                                <span>Experience</span>
-                            </li>
-                            <li>
-                                <strong>7</strong>
-                                <span>Projects</span>
-                            </li>
-                        </ul>
-                        <!-- <div style="margin-top: 2rem;">
-                            <a href="assets/aaj-kya-banau/index.html" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer">
-                                Visit: Aaj Kya Banau?
-                            </a>
-                        </div> -->
-                    </section>
-                </div>
-            </div>
-        </div>
+      </div>
+      <div class="header-actions">
+        <button id="themeToggle" aria-label="Toggle theme">🌙</button>
+        <a id="resumeBtn" class="btn" href="assets/RohanBane_Resume.pdf" download>Download Resume</a>
+        <nav class="socials" aria-label="social links">
+          <a id="linkedin" target="_blank" rel="noopener noreferrer" href="#"><i class="fab fa-linkedin"></i></a>
+          <a id="github" target="_blank" rel="noopener noreferrer" href="#"><i class="fab fa-github"></i></a>
+        </nav>
+      </div>
     </div>
+  </header>
 
-    <div class="ds-about-section">
-        <div class="container">
-            <section>
-                <h2 class="ds-heading">About Me</h2>
-                <p>As an individual with a diverse background in electronics and telecommunications engineering, I have transitioned my skills to excel as a software developer. I began my career as an intern working with HTML and Javascript and have now
-                    expanded my expertise to include infrastructure provision automation. My strengths lie in product and feature planning, mid-level coding, infrastructure management, and delivery management. Despite my achievements, I remain humble
-                    and continuously strive to acquire new knowledge and skills in emerging technologies and innovative procedures. I am a passionate learner and enthusiastic about discovering new approaches to elevate my proficiency in the field.
-                </p>
-            </section>
+  <main class="container main-grid">
+    <section class="left-col">
+      <div class="card about-card">
+        <div class="profile">
+          <img id="avatar" src="assets/images/avatar.jpg" alt="Rohan Bane photo" />
+          <div class="meta">
+            <h2 id="hi">Hi there</h2>
+            <h3 id="role">Software Developer</h3>
+            <div class="stats">
+              <div><strong id="expYears">7+</strong><span>Experience</span></div>
+              <div><strong id="projectsCount">7</strong><span>Projects</span></div>
+            </div>
+          </div>
         </div>
+        <div id="aboutText" class="about-text"></div>
+      </div>
+
+      <div class="card">
+        <h3>Skills</h3>
+        <div id="skillsContainer" class="chips"></div>
+        <div class="chip-actions">
+          <button id="clearSkills" class="link">Clear Filter</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Contact</h3>
+        <ul class="contact-list">
+          <li>Email: <a id="emailLink" href="mailto:rohan@example.com"></a></li>
+          <li>Phone: <span id="phone"></span></li>
+          <li><a id="portfolioLink" href="#" target="_blank">Portfolio</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="right-col">
+      <div class="card">
+        <div class="section-header">
+          <h2>Experience</h2>
+        </div>
+        <div id="experienceContainer" class="experience-list"></div>
+      </div>
+
+      <div class="card">
+        <div class="section-header">
+          <h2>Projects</h2>
+          <input id="projectSearch" placeholder="Search projects..." />
+        </div>
+        <div id="projectFilters" class="chips small"></div>
+        <div id="projectsContainer" class="projects-grid"></div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>Made with ❤️ • <button id="letsTalk" class="btn outline">Let's Talk</button></p>
     </div>
+  </footer>
 
-    <div class="ds-skills-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <h2 class="ds-heading">Core Languages</h2>
-                    <ul class="ds-skills-list">
-                        <li>TypeScript</li>
-                        <li>JavaScript</li>
-                        <li>Node.js</li>
-                        <li>Java</li>
-                        <li>Python</li>
-                        <li>Shell</li>
-                        <li>MySQL</li>
-                        <li>HTML-CSS</li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <h2 class="ds-heading">Frameworks</h2>
-                    <ul class="ds-skills-list">
-                        <li>SpringBoot</li>
-                        <li>Hibernate</li>
-                        <li>Express.js</li>
-                        <li>Angular.js</li>
-                        <li>Flask</li>
-                        <li>Puppeteer</li>
-                        <li>Selenium</li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <h2 class="ds-heading">Services</h2>
-                    <ul class="ds-skills-list">
-                        <li>AWS</li>
-                        <li>Github/Gitlab</li>
-                        <li>Jenkins</li>
-                        <li>JIRA</li>
-                        <li>Confluence</li>
-                        <li>Circle-CI</li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <h2 class="ds-heading">Other Skills</h2>
-                    <ul class="ds-skills-list">
-                        <li>AWS CDK</li>
-                        <li>REST-APIs</li>
-                        <li>Abby FlexiCapture (OCR)</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="ds-experience-section">
-        <div class="container">
-            <!-- Experience section intentionally left blank for future content -->
-        </div>
-    </div>
-    <div class="ds-experience-section">
-        <div class="container">
-            <h2 class="ds-heading">Work Experience</h2>
-            <div class="row ds-experience-list">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-year">Feb 2022 - Present</span>
-                        <h3 class="ds-officename">FINEOS</h3>
-                        <span class="ds-department">Senior Software Developer</span>
-                        <p>Worked in CIA (Cloud Infrastructure Automation) team, developing feature and solutions for internal AWS infrastructure for Fineos products.</p>
-                        <ul>
-                            <li>I am part of a 10-member team that focused on developing features and epics related to enhancing the security and observability of the infrastructure for CloudOps. Additionally, we also aimed to improve the overall efficiency
-                                and cost-effectiveness of the AWS infrastructure. Our team worked towards achieving these objectives through various measures and strategies.</li>
-                            <li>Work areas: AWS CDK, TypeScript, AWS console and services, and AWS CLI.</li>
-                        </ul>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-year">Nov 2021 - Mar 2022</span>
-                        <h3 class="ds-officename">Spraoi - KwikCover</h3>
-                        <span class="ds-department">Senior Software Developer</span>
-                        <p>Worked in backend team, developing APIs for Insurance Agent portal.</p>
-                        <ul>
-                            <li>As part of an 8-member team, I collaborated on various features aimed at providing a more user-friendly experience to Insurance Agents. In particular, I focused on the Reporting Module, which enabled Agents and clients to run
-                                reports on sales and claims.</li>
-                            <li>Work areas: SpringBoot, Java, and REST-APIs.</li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
-            <div class="row ds-experience-list">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-year">Nov 2019 - Aug 2021</span>
-                        <h3 class="ds-officename">Spraoi - Mortis</h3>
-                        <span class="ds-department">Senior Software Developer/Project Lead</span>
-                        <p>Worked on backend team, developing functional workflow to handle insurance sales intake and reduce manual work with the help of OCR.</p>
-                        <ul>
-                            <li>Integrated Flexicapture OCR with insurance forms manager created using Java at backend and React at frontend. Created template based form creation using Databases. Worked on creating Reporting sections to provide visibility
-                                to sales and analytic teams.</li>
-                            <li>Work areas: SpringBoot, Hibernate, Postgres, and Abby Flexicapture OCR</li>
-                        </ul>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-year">Sep 2019 - Dec 2019</span>
-                        <h3 class="ds-officename">AdstringO</h3>
-                        <span class="ds-department">Software Developer</span>
-                        <p>Worked individually with client to build custom compression algorithm</p>
-                        <ul>
-                            <li>Worked On compression algorithms for media files.</li>
-                            <li>Work areas: SpringBoot, Java, and REST-APIs.</li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
-            <div class="row ds-experience-list">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-year">July 2018 - Dec 2019</span>
-                        <h3 class="ds-officename">Anant Corp.</h3>
-                        <span class="ds-department">Software Developer</span>
-                        <p>Worked on multiple project and technologies</p>
-                        <ul>
-                            <li>Worked in team of two on few projects to develop minor to mid grade features. Got exposure to US client and work culture.</li>
-                            <li>Work areas: Docker, Python, Zoho forms, and Javascript</li>
-                        </ul>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-year">Jun 2017 - Dec 2018</span>
-                        <h3 class="ds-officename">IGC/Move HQ</h3>
-                        <span class="ds-department">Junior Software Developer</span>
-                        <p>Worked with transportation company to automated inventory handling.</p>
-                        <ul>
-                            <li>Created fileable PDF and digital signature document using HTML and Javascript.</li>
-                            <li>Work areas: HTML, LESS, CSS, and Javascript</li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
-        </div>
-
-        <footer class="ds-footer text-center">
-            <div class="container">
-                <section>
-                    <span>Stay in touch</span>
-                    <h4></h4>
-                    <p></p>
-                    <a href="mailto:rohanbane09121993@gmail.com" class="ds-button">Lets Talk</a>
-                </section>
-
-            </div>
-        </footer>
-
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
-
+  <script src="assets/js/main.js"></script>
+</body>
 </html>
