--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
                     </figure>
                 </div>
                 <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
-                    <section>
+                    <section style="padding-right: 5%;">
                         <h1>
-                            <span>HI THERE</span>Rohan Bane <br> Software Developer.
+                            <span>HI THERE</span>Rohan Bane <br> Cloud Engineer <br> and <br> Senior Software Developer.
                         </h1>
                         <ul class="ds-numbervalulist">
                             <li>
-                                <strong>7+</strong>
+                                <strong>8+</strong>
                                 <span>Experience</span>
                             </li>
                             <li>
-                                <strong>7</strong>
+                                <strong>10+</strong>
                                 <span>Projects</span>
                             </li>
                         </ul>
@@ -136,10 +136,26 @@
     <div class="ds-experience-section">
         <div class="container">
             <h2 class="ds-heading">Work Experience</h2>
+            <h3 class="ds-header-inner">Capgemini</h3>
             <div class="row ds-experience-list">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <section>
-                        <span class="ds-year">Feb 2022 - Present</span>
+                        <span class="ds-year">Jan 2025 - Present</span>
+                        <h3 class="ds-officename">Senior Consultant – Audi Design Platform</h3>
+                        <span class="ds-department">Lead Software Developer</span>
+                        <p>Worked in the Audi Design Platform project as an Infrastructure Consultant, leading a 5-member team within the Cloud Infrastructure domain.</p>
+                        <ul>
+                            <li>I was responsible for designing and optimizing AWS CDK-based infrastructure leveraging services like Cognito, EC2, Lambda, and CloudWatch to build secure, scalable, and automated cloud solutions. I also integrated AI tools such as Stable Diffusion to enhance workflow automation and streamline design operations.</li>
+                            <li>Work areas: AWS CDK, Python, AWS Cognito, Lambda, EC2, CloudWatch, AI/ML integrations, DevOps (JIRA, Confluence, Scrum).</li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+            <h3 class="ds-header-inner">Everestek Technosoft Solutions</h3>
+            <div class="row ds-experience-list">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <section>
+                        <span class="ds-year">Feb 2022 - Dec 2024</span>
                         <h3 class="ds-officename">FINEOS</h3>
                         <span class="ds-department">Senior Software Developer</span>
                         <p>Worked in CIA (Cloud Infrastructure Automation) team, developing feature and solutions for internal AWS infrastructure for Fineos products.</p>
@@ -217,6 +233,17 @@
                     </section>
                 </div>
             </div>
+        </div>
+
+        <div class="container mt-5">
+            <h2 class="ds-heading">Certifications</h2>
+            <ul class="ds-skills-list">
+            <li>AWS Certified Solutions Architect – Associate (2024)</li>
+            <li>SEED Certified Technology Specialist in Java (2017)</li>
+            <li>ELEVATE Management Training – Jombay (2024)</li>
+            <li>Industrial Automation Training – Godrej & Boyce (2014)</li>
+            <li>HIPAA Training</li>
+            </ul>
         </div>
 
         <footer class="ds-footer text-center">
